# Python-Starter-Template

./: .gitignore  .pre-commit-config.yaml  AGENT.md  GEMINI.md  LICENSE  README.md  Rules.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/my_project/: main.py
tests/: test_main.py
