[project]
name = "my_project"
version = "0.1.0"
description = "Python Project Framework"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "C90",
    "RET",
    "SIM",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "RUF"]
ignore = []

[tool.ruff.lint.mccabe]
# Aquí es donde C901 toma su valor límite
max-complexity = 10

[tool.ruff.format]
# Configuración del formateador (reemplaza a Black)
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
disallow_untyped_defs = true
show_error_codes = true

# Para que ignore carpetas que no quieres revisar
exclude = ["venv", ".venv"]

[[tool.mypy.overrides]]
# Configuración específica para librerías que NO tienen tipos (ejemplo: pandas)
module = "pandas.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
# Dónde debe buscar Pytest las pruebas
testpaths = ["tests"]

# Configuración de la consola y visualización
# -ra: Muestra resumen de todos los tests excepto los pasados
# --strict-markers: Evita errores tipográficos en los marcadores
# --tb=short: Muestra trazas de error más cortas y legibles
addopts = "-ra --strict-markers --tb=short --cov=src --cov-report=term-missing --cov-report=xml"

# Registra tus propios marcadores para evitar advertencias
markers = [
    "slow: tests que tardan mucho en ejecutarse",
    "integration: pruebas que requieren servicios externos",
]

# Indica qué archivos se consideran tests
python_files = ["test_*.py"]
